src/main/java/com/test/rpn/reversepolishcalculator/domain/error/InvalidRpnNotationException.java
package com.test.rpn.reversepolishcalculator.domain.error;

public class InvalidRpnNotationException extends RuntimeException {

    public InvalidRpnNotationException(String message) {
        super(message);
    }
}
